I deleted hard code for movies drop-down menu. I was able to fix for loop to get this drop down working, fixed spacing above header image, added scrollable feature to appended cards in Javascript file and was able to fix the sizing of each card appended when searched so that the cards remain the same height and added some padding to each card.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     font-family: 'Bangers', cursive;
     color: white;
  }
+ .headerImage{
+     margin-top: -25px;
+ }
 
  .nav-container{
     display: flex;
@@ -75,12 +78,21 @@ background-color: rgb(103, 52, 170);
 border: 30px solid black;
 }
 
+.scrollable{
+
+    height: 600px;
+    overflow-y: auto;
+}
+.padding{
+    padding: 1.5rem;
+}
+
 p {
 color:yellow;
 }
 
 .zoom:hover{
-    transform: scale(1.2); 
+    transform: scale(1.1); 
 }
 
 .card-section:hover {
